@@ -1,5 +1,17 @@
 2010-01-04  Maciej Stachowiak  <mjs@apple.com>
 
+        Reviewed by Simon Hausmann.
+
+        Fix some PLATFORM(*_ENDIAN) uses to CPU()
+        https://bugs.webkit.org/show_bug.cgi?id=33148
+
+        * runtime/JSCell.cpp:
+        (JSC::):
+        * runtime/JSValue.h:
+        (JSC::JSValue::):
+
+2010-01-04  Maciej Stachowiak  <mjs@apple.com>
+
         Reviewed by Adam Barth.
 
         Document CPU() macros in comments.
